chore: integration tests + fixes for credential defs & schemas
