# apps/credential-showcase-api-server/src/database/schema/credentialAttribute.ts
@@ -12,11 +12,11 @@ export const credentialAttributes = pgTable('credentialAttribute', {
   credentialSchema: uuid('credential_schema')
     .references(() => credentialSchemas.id, { onDelete: 'cascade' })
     .notNull(),
-  createdAt: timestamp('created_at', { mode: 'string' }).defaultNow().notNull(),
-  updatedAt: timestamp('updated_at', { mode: 'string' })
+  createdAt: timestamp('created_at').defaultNow().notNull(),
+  updatedAt: timestamp('updated_at')
     .defaultNow()
     .notNull()
-    .$onUpdate(() => new Date().toISOString()),
+    .$onUpdate(() => new Date()),
 })
 
 export const credentialAttributeRelations = relations(credentialAttributes, ({ one }) => ({
