# apps/credential-showcase-api-server/src/database/schema/credentialSchema.ts
@@ -1,4 +1,4 @@
-import { pgTable, text, uuid } from 'drizzle-orm/pg-core'
+import { pgTable, text, timestamp, uuid } from 'drizzle-orm/pg-core'
 import { IdentifierTypePg } from './identifierType'
 import { IdentifierType } from '../../types'
 import { relations } from 'drizzle-orm'
@@ -10,6 +10,11 @@ export const credentialSchemas = pgTable('credentialSchema', {
   identifier: text().notNull(),
   name: text().notNull(),
   version: text().notNull(),
+  createdAt: timestamp('created_at').defaultNow().notNull(),
+  updatedAt: timestamp('updated_at')
+    .defaultNow()
+    .notNull()
+    .$onUpdate(() => new Date()),
 })
 
 export const credentialSchemaRelations = relations(credentialSchemas, ({ one, many }) => ({
